--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -8,4 +8,24 @@
         <p>La solution de covoiturage évènementiel</p>
     </div>
 
+    <div class="container">
+        <h2>Les derniers covoit</h2>
+        <div class="row flex">
+            {% for property in properties %}
+                <div class="col-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a href="{{ path('property.show', {id: property.id, slug: property.slug}) }}">{{ property.title }}</a>
+                            </h5>
+                            <p class="card-text">{{ property.start }} (départ {{ property.time }}h)</p>
+                            <div class="text-primary" style="font-weight: bold; font-size: 2rem;">{{ property.formattedPrice }}€</div>
+                            <div class="text-primary">{{ property.seats }} places restantes</div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
 {% endblock %}
