--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,13 @@
                 <a class="nav-link {% if current_menu is defined and current_menu == 'properties' %}active{% endif %}" href="{{ path('admin.property.index') }}">Admin</a>
             </li>
         </ul>
+        {% if app.user %}
+            <un class="navbar-nav">
+                <li class="nav-item">
+                    <a href="{{ path('logout') }}" class="nav-link">Se déconnecter</a>
+                </li>
+            </un>
+        {% endif %}
     </div>
 </nav>
 {% block body %}{% endblock %}
