--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -3,7 +3,20 @@
 {% block title 'Voir les covoiturages' %}
 
 {% block body %}
-    <div class="container">
+    <div class="container mt-4">
         <h1>Les covoiturages</h1>
+
+
+        <div class="row">
+            {% for property in properties %}
+                <div class="col-md-4">
+                    {% include 'property/_property.html.twig' %}
+                </div>
+            {% endfor %}
+        </div>
+
+        <div class="pagination">
+            {{ knp_pagination_render(properties) }}
+        </div>
     </div>
 {% endblock %}
