--- a/templates/property/_property.html.twig
+++ b/templates/property/_property.html.twig
@@ -5,7 +5,7 @@
                 {{ property.title }}
             </a>
         </h5>
-        <p class="card-text">Départ: {{ property.start }} <br> Arrivée: {{ property.destination }}</p>
+        <p class="card-text">Départ: {{ property.start }} <br> Arrivée: {{ property.destination }} <br> {{ property.seats }} Places</p>
         <div class="text-primary" style="font-size: 2rem; font-weight: bold;">
             {{ property.formattedPrice }} €
         </div>
