--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -3,9 +3,28 @@
 {% block title 'Voir les covoiturages' %}
 
 {% block body %}
+    <div class="jumbotron">
+        <div class="container">
+            {{ form_start(form) }}
+            <div class="form-row align-items-end">
+                <div class="col">
+                    {{ form_row(form.maxPrice) }}
+                </div>
+                <div class="col">
+                    {{ form_row(form.minSeats) }}
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <button class="btn btn-primary">Rechercher</button>
+                    </div>
+                </div>
+            </div>
+            {{ form_end(form) }}
+        </div>
+    </div>
+
     <div class="container mt-4">
         <h1>Les covoiturages</h1>
-
 
         <div class="row">
             {% for property in properties %}
@@ -14,7 +33,6 @@
                 </div>
             {% endfor %}
         </div>
-
         <div class="pagination">
             {{ knp_pagination_render(properties) }}
         </div>
