--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -6,14 +6,40 @@
 {% block body %}
     <div class="jumbotron">
         <div class="container">
+            {% for message in app.flashes('success') %}
+                <div class="alert alert-success">
+                    {{ message }}
+                </div>
+            {% endfor %}
+            {% if not form.vars.valid %}
+               <div class="alert alert-danger">
+                   Erreur dans le formulaire
+               </div>
+            {% endif %}
             <div class="row">
                 <div class="col-md-8">
                 </div>
                 <div class="col-md-4">
                     <h1>{{ property.title }}</h1>
-                    <h2>Départ de {{ property.start }} - {{ property.seats }} places restantes</h2>
+                    <h2>Départ de {{ property.start }} <br> {{ property.seats }} places restantes</h2>
                     <div class="text-primary" style="font-size: 4rem; font-weight: bold;">{{ property.formattedPrice }} €</div>
                     <a href="#" class="btn btn-primary">Contacter le conducteur</a>
+                    <div id="contactForm" class="mt-4">
+                        {{ form_start(form) }}
+                        <div class="row">
+                            <div class="col">{{ form_row(form.firstname) }}</div>
+                            <div class="col">{{ form_row(form.lastname) }}</div>
+                        </div>
+                        <div class="row">
+                            <div class="col">{{ form_row(form.phone) }}</div>
+                            <div class="col">{{ form_row(form.email) }}</div>
+                        </div>
+                        {{ form_rest(form) }}
+                        <div class="form-group">
+                            <button class="btn-primary">Envoyer</button>
+                        </div>
+                        {{ form_end(form) }}
+                    </div>
                 </div>
             </div>
         </div>
