--- a/templates/admin/property/_form.html.twig
+++ b/templates/admin/property/_form.html.twig
@@ -11,6 +11,7 @@
     <div class="col-md-2">{{ form_row(form.type) }}</div>
 </div>
 <div class="row">
+    <div class="col-md-2">{{ form_row(form.imageFile) }}</div>
     <div class="col-md-2">{{ form_row(form.participation) }}</div>
     <div class="col-md-1">{{ form_row(form.full) }}</div>
 </div>
