--- a/templates/property/_property.html.twig
+++ b/templates/property/_property.html.twig
@@ -1,11 +1,20 @@
 <div class="card mb-4">
+    {% if property.filename %}
+        <img src="{{ vich_uploader_asset(property, 'imageFile') | imagine_filter('thumb') }}" alt="card-img-top"
+             style="width: 100%; height:auto;">
+    {% else %}
+        <img src="{{ '/images/properties/empty.jpg' | imagine_filter('thumb') }}" alt="card-img-top"
+             style="width: 100%; height:auto;">
+
+    {% endif %}
     <div class="card-body">
         <h5 class="card-title">
             <a href="{{ path('property.show', {slug: property.slug, id: property.id}) }}">
                 {{ property.title }}
             </a>
         </h5>
-        <p class="card-text">Départ: {{ property.start }} <br> Arrivée: {{ property.destination }} <br> {{ property.seats }} Places</p>
+        <p class="card-text">Départ: {{ property.start }} <br> Arrivée: {{ property.destination }}
+            <br> {{ property.seats }} Places</p>
         <div class="text-primary" style="font-size: 2rem; font-weight: bold;">
             {{ property.formattedPrice }} €
         </div>
