--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -18,6 +18,14 @@
             {% endif %}
             <div class="row">
                 <div class="col-md-8">
+                    {% if property.filename %}
+                        <img src="{{ vich_uploader_asset(property, 'imageFile') | imagine_filter('medium') }}" alt="card-img-top"
+                             style="width: 100%; height:auto;">
+                    {% else %}
+                        <img src="{{ '/images/properties/empty.jpg' | imagine_filter('medium') }}" alt="card-img-top"
+                             style="width: 100%; height:auto;">
+
+                    {% endif %}
                 </div>
                 <div class="col-md-4">
                     <h1>{{ property.title }}</h1>
@@ -63,6 +71,11 @@
             </div>
             <div class="col-md-4">
                 <h3>Spécificités</h3>
+                <ul class="list-group">
+                    {% for option in property.options %}
+                        <li class="list-group-item">{{ option.name }}</li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
     </div>
