--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -31,8 +31,8 @@
                     <h1>{{ property.title }}</h1>
                     <h2>Départ de {{ property.start }} <br> {{ property.seats }} places restantes</h2>
                     <div class="text-primary" style="font-size: 4rem; font-weight: bold;">{{ property.formattedPrice }} €</div>
-                    <a href="#" class="btn btn-primary">Contacter le conducteur</a>
-                    <div id="contactForm" class="mt-4">
+                    <a href="#" class="btn btn-primary" id="contactButton" {% if form.vars.submitted %} style="display: none" {% endif %}>Contacter le conducteur</a>
+                    <div id="contactForm" class="mt-4" {% if not form.vars.submitted %} style="display: none" {% endif %}>
                         {{ form_start(form) }}
                         <div class="row">
                             <div class="col">{{ form_row(form.firstname) }}</div>
