--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -65,7 +65,7 @@
                     </tr>
                     <tr>
                         <td>Type d'évènement</td>
-                        <td>{{ property.type }}</td>
+                        <td>{{ property.eventType }}</td>
                     </tr>
                 </table>
             </div>
